--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,25 +1,26 @@
 {
   "compilerOptions": {
+    // build info vai para .tsbuildinfo (opcional)
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
+
+    /* Alvo e módulo */
     "target": "ES2022",
+    "module": "CommonJS",           // comum em configs de Node
     "lib": ["ES2023"],
-    "module": "ESNext",
+    "moduleResolution": "node",
+
+    /* Project references */
+    "composite": true,              // ← OBRIGATÓRIO
+    "outDir": "dist-node",          // pasta de saída (qualquer nome)
+
+    /* Outros */
     "skipLibCheck": true,
-
-    /* Bundler mode */
-    "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
-    "moduleDetection": "force",
-    "noEmit": true,
-
-    /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "erasableSyntaxOnly": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noFallthroughCasesInSwitch": true
+    // → Removido "noEmit": true
   },
   "include": ["vite.config.ts"]
 }
