--- a/package.json
+++ b/package.json
@@ -1,40 +1,73 @@
 {
   "name": "olie-erp",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "test": "jest",
+    "type-check": "tsc -p tsconfig.json --noEmit"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.0.1",
-    "lucide-react": "^0.511.0",
+    "@hello-pangea/dnd": "^18.0.1",
+    "@hookform/resolvers": "^3.3.2",
+    "@supabase/supabase-js": "^2.39.0",
+    "chart.js": "^4.4.0",
+    "identity-obj-proxy": "^3.0.0",
+    "lucide-react": "^0.292.0",
     "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.56.4",
+    "react-hook-form": "^7.48.2",
     "react-input-mask": "^2.0.4",
-    "react-router-dom": "^7.6.0",
-    "recharts": "^2.15.3",
-    "zod": "^3.25.7"
+    "react-router-dom": "^6.20.0",
+    "recharts": "^2.10.1",
+    "tailwindcss": "^3.3.5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "@vitejs/plugin-react": "^4.4.1",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.7",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^14.3.1",
+    "@types/jest": "^29.5.14",
+    "@types/react": "^18.3.22",
+    "@types/react-beautiful-dnd": "^13.1.7",
+    "@types/react-dom": "^18.2.15",
+    "@types/react-input-mask": "^3.0.5",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.53.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.4.31",
+    "ts-jest": "^29.3.4",
+    "typescript": "^5.8.3",
+    "vite": "^5.0.0"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.ts"
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    },
+    "transform": {
+      "^.+\\.(ts|tsx)$": [
+        "ts-jest",
+        {
+          "tsconfig": {
+            "jsx": "react-jsx"
+          }
+        }
+      ]
+    }
   }
 }
